src/codex_runner/snapshots/codex_gitlab_code_review__codex_runner__scripts__tests__browser_mcp_prereq_script.snap
---
source: src/codex_runner/scripts.rs
expression: browser_prereq
---
browser_mcp_command='browser-mcp'
if ! command -v "$browser_mcp_command" >/dev/null 2>&1; then
  echo "codex-runner-error: browser MCP requires $browser_mcp_command in the Codex image"
  exit 1
fi
