src/codex_runner/snapshots/codex_gitlab_code_review__codex_runner__scripts__tests__git_bootstrap_auth_cleanup_script.snap
---
source: src/codex_runner/scripts.rs
expression: git_bootstrap_auth_cleanup_script()
---
if [ -n "${GIT_CONFIG_COUNT:-}" ]; then
  git_config_count="$GIT_CONFIG_COUNT"
  unset GIT_CONFIG_COUNT
  i=0
  while [ "$i" -lt "$git_config_count" ]; do
    unset "GIT_CONFIG_KEY_$i" "GIT_CONFIG_VALUE_$i"
    i=$((i + 1))
  done
fi
unset GITLAB_TOKEN
