src/codex_runner/snapshots/codex_gitlab_code_review__codex_runner__scripts__tests__review_command_script.snap
---
source: src/codex_runner/scripts.rs
expression: review
---
set -eu
GITLAB_TOKEN='token-value'
repo_dir='/work/repo/group/repo'
mkdir -p /work
mkdir -p "$(dirname "$repo_dir")"
log_file="/tmp/codex-git.log"
run_git() {
  action="$1"
  shift
  if [ "${CODEX_RUNNER_DEBUG:-}" = "1" ]; then
    "$@" || { echo "codex-runner-error: git ${action} failed"; exit 1; }
  else
    if ! "$@" >"$log_file" 2>&1; then
      echo "codex-runner-error: git ${action} failed"
      tail -n 50 "$log_file" | sed 's/^/codex-runner-error: /'
      exit 1
    fi
  fi
}
export GITLAB_TOKEN='token-value'
export GIT_CONFIG_COUNT='3'
export GIT_CONFIG_KEY_0='url.https://oauth2:token-value@gitlab.example.com/.insteadOf'
export GIT_CONFIG_VALUE_0='git@gitlab.example.com:'
export GIT_CONFIG_KEY_1='url.https://oauth2:token-value@gitlab.example.com/.insteadOf'
export GIT_CONFIG_VALUE_1='ssh://git@gitlab.example.com/'
export GIT_CONFIG_KEY_2='url.https://oauth2:token-value@gitlab.example.com/.insteadOf'
export GIT_CONFIG_VALUE_2='https://gitlab.example.com/'

run_git clone git clone --depth 1 --recurse-submodules 'https://oauth2:'"${GITLAB_TOKEN}"'@gitlab.example.com/group/repo.git' "$repo_dir"
cd "$repo_dir"
run_git fetch git fetch --depth 1 origin 'abc123'
run_git checkout git checkout 'abc123'
run_git submodule_update git submodule update --init --recursive
run_git fetch git fetch --depth 1 origin 'main'
git branch --force 'main' FETCH_HEAD
# Ensure merge-base works for PR review by unshallowing history.
run_git fetch git fetch --unshallow
if [ -n "${GIT_CONFIG_COUNT:-}" ]; then
  git_config_count="$GIT_CONFIG_COUNT"
  unset GIT_CONFIG_COUNT
  i=0
  while [ "$i" -lt "$git_config_count" ]; do
    unset "GIT_CONFIG_KEY_$i" "GIT_CONFIG_VALUE_$i"
    i=$((i + 1))
  done
fi
unset GITLAB_TOKEN

origin_url="$(git remote get-url origin || true)"
if [ -n "$origin_url" ]; then
  sanitized_origin="$(printf '%s' "$origin_url" | sed -E 's#(https?://)oauth2:[^@]*@#\1#')"
  run_git set_url git remote set-url origin "$sanitized_origin"
fi
prefetch_deps() (
  set +e
  deps_dir="$repo_dir/.codex_deps"
  log_file="/tmp/codex-deps.log"
  mkdir -p "$deps_dir"
  failures=0
  run_prefetch() {
    action="$1"
    shift
    if [ "${CODEX_RUNNER_DEBUG:-}" = "1" ]; then
      "$@" || { echo "codex-runner-warn: $action failed"; failures=$((failures+1)); }
    else
      if ! "$@" >"$log_file" 2>&1; then
        echo "codex-runner-warn: $action failed"
        tail -n 50 "$log_file" | sed 's/^/codex-runner-warn: /'
        failures=$((failures+1))
      fi
    fi
  }

  if [ -f "package.json" ]; then
    if [ -f "pnpm-lock.yaml" ] && command -v pnpm >/dev/null 2>&1; then
      run_prefetch "pnpm install" pnpm install --ignore-scripts
    elif [ -f "yarn.lock" ] && command -v yarn >/dev/null 2>&1; then
      run_prefetch "yarn install" yarn install --ignore-scripts
    elif [ -f "package-lock.json" ] || [ -f "npm-shrinkwrap.json" ]; then
      run_prefetch "npm ci" npm ci --ignore-scripts --no-audit --no-fund
    else
      run_prefetch "npm install" npm install --ignore-scripts --no-audit --no-fund
    fi
  fi

  if [ -f "Cargo.toml" ] && command -v cargo >/dev/null 2>&1; then
    mkdir -p "$deps_dir/cargo"
    if [ -f "Cargo.lock" ]; then
      CARGO_HOME="$deps_dir/cargo" run_prefetch "cargo fetch" cargo fetch --locked
    else
      echo "codex-runner-warn: Cargo.lock missing; skipping cargo fetch"
    fi
  fi

  if [ -f "go.mod" ] && command -v go >/dev/null 2>&1; then
    mkdir -p "$deps_dir/go/mod" "$deps_dir/go/cache"
    GOMODCACHE="$deps_dir/go/mod" GOCACHE="$deps_dir/go/cache" GOFLAGS="-mod=readonly" run_prefetch "go mod download" go mod download
  fi

  if [ -f "requirements.txt" ] && command -v pip >/dev/null 2>&1; then
    mkdir -p "$deps_dir/pip"
    run_prefetch "pip download requirements.txt" pip download -r requirements.txt -d "$deps_dir/pip"
  fi

  if [ -f "pyproject.toml" ] && [ -f "poetry.lock" ] && command -v poetry >/dev/null 2>&1 && command -v pip >/dev/null 2>&1; then
    if [ "${CODEX_RUNNER_DEBUG:-}" = "1" ]; then
      poetry export -f requirements.txt --without-hashes -o /tmp/poetry-reqs.txt || failures=$((failures+1))
    else
      if ! poetry export -f requirements.txt --without-hashes -o /tmp/poetry-reqs.txt >"$log_file" 2>&1; then
        echo "codex-runner-warn: poetry export failed"
        tail -n 50 "$log_file" | sed 's/^/codex-runner-warn: /'
        failures=$((failures+1))
      fi
    fi
    if [ -f /tmp/poetry-reqs.txt ]; then
      mkdir -p "$deps_dir/pip"
      run_prefetch "pip download poetry export" pip download -r /tmp/poetry-reqs.txt -d "$deps_dir/pip"
    fi
  fi

  if [ -f "pom.xml" ] && command -v mvn >/dev/null 2>&1; then
    mkdir -p "$deps_dir/m2"
    MAVEN_USER_HOME="$deps_dir/m2" run_prefetch "maven go-offline" mvn -q -DskipTests dependency:go-offline
  fi

  if [ "$failures" -ne 0 ]; then
    return 1
  fi
  return 0
)
prefetch_home="/tmp/codex-prefetch"
mkdir -p "$prefetch_home/.config" "$prefetch_home/.cache" "$prefetch_home/.state"
if ! HOME="$prefetch_home" XDG_CONFIG_HOME="$prefetch_home/.config" XDG_CACHE_HOME="$prefetch_home/.cache"   XDG_STATE_HOME="$prefetch_home/.state" GITLAB_TOKEN="" CODEX_HOME="" prefetch_deps; then
  echo "codex-runner-warn: dependency prefetch had failures; continuing"
fi
export CARGO_HOME="$repo_dir/.codex_deps/cargo"
export GOMODCACHE="$repo_dir/.codex_deps/go/mod"
export GOCACHE="$repo_dir/.codex_deps/go/cache"
export MAVEN_USER_HOME="$repo_dir/.codex_deps/m2"
# Use the mounted auth directory directly so token refresh persists.
mkdir -p '/root/.codex'
export CODEX_HOME='/root/.codex'
codex_install_log='/tmp/codex-install.log'
if ! rm -f "$codex_install_log" "${codex_install_log}.tmp"; then
  echo "codex-runner-error: could not prepare codex install log"
  exit 1
fi
if ! command -v codex >/dev/null 2>&1; then
  echo "codex-runner: codex not found, installing"
  if ! command -v npm >/dev/null 2>&1; then
    echo "codex-runner-error: npm not found; provide a base image with node/npm or preinstall codex"
    exit 1
  fi
  # Keep npm output out of service logs while retaining a live, bounded tail for diagnostics.
  capture_codex_install_log() {
    while :; do
      codex_install_chunk=""
      IFS= read -r -N 65536 -t 0.1 codex_install_chunk
      codex_install_read_status="$?"
      if [ -n "$codex_install_chunk" ]; then
        printf '%s' "$codex_install_chunk" | tail -c 65536 >>"$codex_install_log"
        codex_install_log_size="$(wc -c <"$codex_install_log")"
        if [ "$codex_install_log_size" -gt 524288 ]; then
          tail -c 524288 "$codex_install_log" >"${codex_install_log}.tmp"
          mv "${codex_install_log}.tmp" "$codex_install_log"
        fi
      fi
      if [ "$codex_install_read_status" -eq 0 ] || [ "$codex_install_read_status" -gt 128 ]; then
        continue
      fi
      break
    done
  }
  set +e
  npm install -g @openai/codex 2>&1 | capture_codex_install_log
  codex_install_status="${PIPESTATUS[0]}"
  set -e
  if [ "$codex_install_status" -ne 0 ]; then
    echo "codex-runner-error: codex install failed"
    exit 1
  fi
  echo "codex-runner: codex install completed"
fi
if ! codex_path="$(command -v codex 2>/dev/null)"; then
  echo "codex-runner-error: codex validation failed: executable not found"
  exit 1
fi
if ! codex_version="$("$codex_path" --version 2>&1)" || [ -z "$codex_version" ]; then
  echo "codex-runner-error: codex validation failed"
  if [ -n "$codex_version" ]; then
    printf '%s\n' "$codex_version" | sed 's/^/codex-runner-error: /'
  fi
  exit 1
fi
echo "codex-runner: using $codex_version at $codex_path"
browser_mcp_command='browser-mcp'
if ! command -v "$browser_mcp_command" >/dev/null 2>&1; then
  echo "codex-runner-error: browser MCP requires $browser_mcp_command in the Codex image"
  exit 1
fi
wait_for_browser_mcp() {
  deadline=$((SECONDS + 30))
  probe_read_timeout_seconds=2
  last_probe="not attempted"
  while [ "$SECONDS" -lt "$deadline" ]; do
    if exec 3<>/dev/tcp/127.0.0.1/9222 2>/dev/null; then
      printf 'GET /json/version HTTP/1.1\r\nHost: 127.0.0.1\r\nConnection: close\r\n\r\n' >&3
      response="$(timeout "${probe_read_timeout_seconds}s" cat <&3 || true)"
      exec 3<&-
      exec 3>&-
      status_line="$(printf '%s\n' "$response" | sed -n '1p' | tr -d '\r')"
      if printf '%s' "$status_line" | grep -q ' 200 '; then
        if printf '%s' "$response" | grep -Eq 'webSocketDebuggerUrl|"Browser"'; then
          last_probe="DevTools response ready"
          return 0
        else
          last_probe="HTTP 200 without DevTools marker"
        fi
      else
        last_probe="HTTP status ${status_line:-<empty>}"
      fi
    else
      last_probe="connection failed"
    fi
    sleep 1
  done
  echo "codex-runner-error: browser MCP endpoint did not become ready at http://127.0.0.1:9222/json/version (last probe: $last_probe)"
  exit 1
}
wait_for_browser_mcp
echo "codex-runner: starting codex app-server"
exec codex -c 'model="gpt-test"' -c 'model_reasoning_summary="auto"' -c 'model_reasoning_effort="medium"' -c 'mcp_servers.browser.command="browser-mcp"' -c 'mcp_servers.browser.args=["--headless","--browserUrl=http://127.0.0.1:9222"]' -c 'mcp_servers.browser.enabled=true' -c 'mcp_servers.gitlab-discovery.url="http://127.0.0.1:8787/mcp"' -c 'mcp_servers.gitlab-discovery.enabled=true' -c 'mcp_servers.filesystem.enabled=true' app-server
